--- a/Javascript/shire-bank/src/components/Header/styles_header.css
+++ b/Javascript/shire-bank/src/components/Header/styles_header.css
@@ -65,6 +65,7 @@ header {
     display: flex;
     height: 100%;
     visibility: visible;
+    overflow-y: auto;
   }
   .navbar li {
     font-size: 1.5rem;
@@ -77,6 +78,25 @@ header {
     border-bottom: none;
   }
   .button-mobile {
+    display: flex;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    border: none;
+    background: none;
+    color: #fff;
+    cursor: pointer;
+    gap: 0.5rem;
+  }
+  .button-mobile .button-menu-hamburguer {
+    width: 20px;
+    border-top: 2px solid #fff;
+  }
+  .button-mobile .button-menu-hamburguer::after, .button-mobile .button-menu-hamburguer::before {
+    content: "";
     display: block;
+    width: 20px;
+    height: 2px;
+    background-color: #fff;
+    margin-top: 5px;
   }
 }/*# sourceMappingURL=styles_header.css.map */
