--- a/Javascript/shire-bank/src/pages/Application/Dashboard/styles.scss
+++ b/Javascript/shire-bank/src/pages/Application/Dashboard/styles.scss
@@ -351,6 +351,12 @@ aside {
 
 // Media Queries
 
+@media only screen and (max-width: 1536px) {
+  .root-xl {
+    max-width: 60%;
+  }
+}
+
 @media only screen and (max-width: 1280px) {
   main {
     gap: 1rem;
