--- a/Javascript/shire-bank/src/pages/Login/styles.scss
+++ b/Javascript/shire-bank/src/pages/Login/styles.scss
@@ -6,11 +6,14 @@ header {
   }
 }
 
+main {
+  padding: 2rem 0;
+}
+
 .main-wrapper {
   background-color: $background;
   padding: 1rem;
   width: 80%;
-  height: 80vh;
   border-radius: 10px;
   margin: 0 auto;
   display: flex;
@@ -52,6 +55,7 @@ header {
       padding: 1rem;
       border-radius: 10px;
       letter-spacing: .5px;
+      margin-top: 2rem;
 
       .section-comments-user {
         margin-top: 1rem;
