--- a/Ajax and API/pokedex/styles/global.css
+++ b/Ajax and API/pokedex/styles/global.css
@@ -9,4 +9,47 @@ body {
 body, html {
   height: 100%;
   font-family: 'Roboto', sans-serif;
+  overflow-y: hidden;
+  background-color: #181b1d;
+}
+
+.home-content{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+  gap: 5rem;
+}
+
+.banner{
+  margin-top: 5rem;
+  width: 80%;
+}
+
+.home-button {
+  width: 200px;
+  padding: 1rem;
+  border-radius: 30px;
+  font-size: 1.5rem;
+  font-family: 'Press Start 2P', cursive;
+  background-color: #3a5ba8;
+  color: #fff;
+  cursor: pointer;
+  border: none;
+  transition: all .2s;
+}
+
+.home-button:hover {
+  transform: scale(1.1);
+  color: #f0c30a;
+}
+
+.disabled {
+  display: none;
+}
+
+.loading {
+  height: 100%;
+  display: flex;
+  align-items: center;
 }
