--- a/Ajax and API/server-flask/styles.css
+++ b/Ajax and API/server-flask/styles.css
@@ -41,8 +41,7 @@ h1 {
 .form-container {
   display: flex;
   flex-direction: column;
-  width: 200px;
-  height: 225px;
+  width: 250px;
 }
 
 .form-title{
@@ -61,9 +60,10 @@ h1 {
   padding: 1rem;
   border-radius: 0 0 8px 8px;
   height: 100%;
+  height: 250px;
 }
 
-.form-container form  div{
+.form-container form div{
   display: flex;
   flex-direction: column;
   gap: 0.1rem;
@@ -100,6 +100,7 @@ h1 {
   margin-top: .5rem;
   display: flex;
   flex-direction: column;
+  min-height: 100px;
 }
 
 .form-response p span {
