--- a/Ajax and API/spotCar/components/header/styles.css
+++ b/Ajax and API/spotCar/components/header/styles.css
@@ -2,6 +2,17 @@ header {
   height: 80px;
   display: flex;
   align-items: center;
+  position: relative;
+}
+
+header::after {
+  content: '';
+  width: 100%;
+  height: 6px;
+  background: rgb(30,58,138);
+  background: linear-gradient(90deg, rgba(30,58,138,1) 0%, rgba(38,74,177,1) 35%, rgba(30,58,138,1) 70%, rgba(38,74,177,1) 100%);
+  position: absolute;
+  bottom: 0;
 }
 
 header .container {
@@ -13,5 +24,25 @@ header .container {
 header .container nav ul {
   display: flex;
   align-items: center;
-  gap: 1rem;
+  gap: 2rem;
+}
+
+header .container nav ul li a {
+  color: var(--gray-700);
+  font-size: 1.05rem;
+}
+
+header .container nav ul li a:hover {
+  color: var(--blue-900);
+  position: relative;
+}
+
+header .container nav ul li a:hover::after{
+  content: '';
+  width: 100%;
+  height: 2px;
+  background-color: var(--blue-900);
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
