Footer created and new styles added

--- a/Ajax and API/spotCar/styles/global.css
+++ b/Ajax and API/spotCar/styles/global.css
@@ -11,7 +11,7 @@
   --blue-300: #93c5fd;
   --blue-500: #3b82f6;
   --blue-700: #1d4ed8;
-  --blue-900: #1e3a8a;
+  --blue-900: #00337C;
 }
 
 html {
