--- a/Ajax and API/spotCar/components/header/styles.css
+++ b/Ajax and API/spotCar/components/header/styles.css
@@ -1,8 +1,8 @@
 header {
-  height: 80px;
-  display: flex;
-  align-items: center;
-  position: relative;
+  position: fixed;
+  z-index: 2;
+  background-color: var(--white);
+  width: 100%;
 }
 
 header::after {
@@ -16,9 +16,11 @@ header::after {
 }
 
 header .container {
+  height: 80px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: relative;
 }
 
 header .container nav ul {
@@ -40,7 +42,7 @@ header .container nav ul li a:hover {
 header .container nav ul li a:hover::after{
   content: '';
   width: 100%;
-  height: 2px;
+  height: 2.5px;
   background-color: var(--blue-900);
   position: absolute;
   bottom: 0;
