--- a/Ajax and API/spotCar/styles.css
+++ b/Ajax and API/spotCar/styles.css
@@ -5,6 +5,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
+  margin-top: 5rem;
 }
 
 .banner-home::after {
@@ -52,8 +53,8 @@
 }
 
 .banner-home div button:hover {
-  color: var(--white);
   background-color: var(--blue-900);
+  color: var(--white);
 }
 
 .dropDown {
@@ -67,7 +68,7 @@
 }
 
 .content-home:nth-child(2) {
-  padding-top: 5rem;
+  padding-top: 7rem;
   margin-top: -5rem;
 }
 
