--- a/Ajax and API/spotCar/styles/global.css
+++ b/Ajax and API/spotCar/styles/global.css
@@ -12,6 +12,10 @@
   --blue-500: #3b82f6;
   --blue-700: #1d4ed8;
   --blue-900: #00337C;
+
+  --green-600: #16a34a;
+
+  --red-600: #dc2626;
 }
 
 html {
