Created modal, fetching data with javascript's fetch module and database population

--- a/Ajax and API/spotCar/styles/card.css
+++ b/Ajax and API/spotCar/styles/card.css
@@ -40,6 +40,7 @@
   letter-spacing: 2px;
   background-color: var(--white);
   color: var(--gray-700);
+  transition: all .4s ease-in-out;
 }
 
 .card-container button:hover {
@@ -85,7 +86,7 @@
 .card-description-group div {
   display: flex;
   align-items: center;
-  gap: .5rem;
+  gap: .4rem;
 }
 
 .card-description div span {
