--- a/Ajax and API/spotCar/components/header/styles.css
+++ b/Ajax and API/spotCar/components/header/styles.css
@@ -57,11 +57,14 @@ header .container nav ul li a:hover::after{
 }
 
 .header-navigation button {
+  display: flex;
+  align-items: center;
+  gap: .8rem;
   box-shadow: 0 3px 1px -2px #0003, 0 2px 2px #00000024, 0 1px 5px #0000001f;
   background-color: var(--white);
   border: none;
   border-radius: 4px;
-  padding: .25rem 1rem;
+  padding: .5rem 1rem;
   font-weight: 600;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -73,4 +76,21 @@ header .container nav ul li a:hover::after{
 .header-navigation button:hover {
   background-color: var(--blue-900);
   color: var(--white);
+}
+
+.header-navigation button::before {
+  content: '';
+  width: 25px;
+  height: 25px;
+  background-image: url('../../assets/icons/userBlue.png');
+  background-size: cover;
+  transition: all .4s ease-in-out;
+}
+
+.header-navigation button:hover::before {
+  background-image: url('../../assets/icons/user.png');
+}
+
+.header-navigation button img {
+  width: 25px;
 }
