--- a/Ajax and API/spotCar/styles/global.css
+++ b/Ajax and API/spotCar/styles/global.css
@@ -33,9 +33,12 @@ body {
   flex-direction: column;
 }
 
+button, textarea, input {
+  font-family: 'Poppins', sans-serif;
+}
+
 button {
   cursor: pointer;
-  font-family: 'Poppins', sans-serif;
 }
 
 a{
@@ -54,6 +57,7 @@ main {
   margin-top: 5rem;
   padding-bottom: 80px;
   flex: 1;
+  position: relative;
 }
 
 .bounce {
@@ -70,4 +74,8 @@ main {
   60% {
     transform: translateY(-15px);
   }
+}
+
+.hidden {
+  display: none;
 }
