--- a/Ajax and API/spotCar/styles/card.css
+++ b/Ajax and API/spotCar/styles/card.css
@@ -28,6 +28,10 @@
   background-color: var(--red-600);
 }
 
+.card-header-maintenance span {
+  background-color: var(--orange-600);
+}
+
 .card-container button {
   margin-top: 1.5rem;
   width: 100%;
@@ -61,6 +65,7 @@
 }
 
 .card-content h3{
+  font-size: .95rem;
   font-weight: 600;
   color: var(--blue-900);
 }
@@ -97,4 +102,8 @@
 
 .card-description div img {
   width: 25px;
+}
+
+.card-header-rented button {
+  cursor: not-allowed;
 }
