Design change and delete method created

--- a/Ajax and API/market-list/styles/header.css
+++ b/Ajax and API/market-list/styles/header.css
@@ -1,4 +1,6 @@
 header h1{
     text-align: center;
-    margin-top: 1rem;
+    margin-top: 2rem;
+    text-transform: uppercase;
+    letter-spacing: 2px;
 }
