--- a/Ajax and API/market-list/styles/global.css
+++ b/Ajax and API/market-list/styles/global.css
@@ -1,10 +1,18 @@
 :root {
-    --gray-100: #f3f4f6;
-    --gray-200: #e5e7eb;
-    --gray-300: #d1d5db;
-    --gray-500: #6b7280;
-    --gray-700: #374151;
-    --gray-900: #111827;
+    --gray-100: #f5f5f5;
+    --gray-200: #e5e5e5;
+    --gray-300: #d4d4d4;
+    --gray-500: #737373;
+    --gray-700: #404040;
+    --gray-800: #202024;
+    --gray-900: #171717;
+
+    --black: #181818;
+    --white: #fff;
+
+    --green-600: #16a34a;
+    --red-600: #dc2626;
+    --orange-600: #ea580c;
   }
 
 * {
@@ -14,10 +22,10 @@
 }
 
 body, html {
-    height: 100%;
-    background-color: var(--gray-900);
+    height: calc(100% - 1rem);
+    background-color: var(--black);
     color: var(--gray-100);
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Inter', sans-serif;
 }
 
 li {
@@ -26,6 +34,7 @@ li {
 
 button {
     cursor: pointer;
+    font-family: 'Inter', sans-serif;
 }
 
 .disabled {
