--- a/Ajax and API/market-list/styles/modal.css
+++ b/Ajax and API/market-list/styles/modal.css
@@ -11,7 +11,7 @@
 
 .modal-content {
   position: relative;
-  background-color: #0284c7;
+  background-color: var(--gray-800);
   max-width: 500px;
   width: 100%;
   border-radius: 8px;
@@ -21,21 +21,22 @@
 .modal-button-close {
   position: absolute;
   right: 1.5rem;
-  padding: .2rem .4rem;
-  border-radius: 4px;
   border: none;
   background-color: transparent;
-  color: #be123c;
-  font-size: 1.25rem;
-  font-weight: bold;
+  transition: all .4s ease-in-out;
+}
+
+.modal-button-close:hover {
+  filter: brightness(.9);
 }
 
 .modal-title {
   font-size: 1.5rem;
+  font-weight: 600;
 } 
 
 .modal-content form {
-  margin-top: 1rem;
+  margin-top: 2rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -73,8 +74,10 @@
   font-weight: bold;
   text-transform: uppercase;
   transition: all .2s;
-  background: var(--gray-900);
+  background: var(--green-600);
   color:  var(--gray-100);
+  letter-spacing: 2px;
+  margin-top: 1rem;
 }
 
 .modal-button:hover {
