Added 'disabled' behavior to search button

--- a/Ajax and API/bff-work/styles.css
+++ b/Ajax and API/bff-work/styles.css
@@ -52,6 +52,11 @@ button:hover {
   filter: brightness(.9);
 }
 
+button:disabled,
+button[disabled]{
+  cursor: not-allowed;
+}
+
 input {
   background-color: #161b22;
   border: none;
